--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,23 @@
   height: 50%;
   width: 100%;
 }
+#top-panel{
+	border:3px solid #999;
+	text-align:center;
+	font-family:Helvetica;
+	line-height: 30px;
+}
+#table{
+	text-align:center;
+	width: 100%;
+    border: 3px solid #999;
+
+}
 
 html,
 body{
   height: 100%;
   margin: 10;
   padding: 10;
-}
-#top-panel{
-	
-	border:3px solid #999;
-	text-align:center;
-	font-family:Calibri (Body);
-	line-height: 30px;
+  font-family:Helvetica;
 }
