--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,38 @@
 #top-panel{
 	border:3px solid #999;
 	text-align:center;
-	font-family:Helvetica;
 	line-height: 30px;
 }
-#table{
-	text-align:center;
-	width: 100%;
-    border: 3px solid #999;
-
+::placeholder {
+  font-family:Consolas;
 }
-
-html,
+select{font-family:Consolas;}
 body{
-  height: 100%;
-  margin: 10;
-  padding: 10;
-  font-family:Helvetica;
+	background-color: #f9f9f9;
+	height: 100%;
+	margin: 10;
+	padding: 10;
+	font-family:Consolas;
+	
+}
+table{
+	border-collapse: collapse;
+	text-align:center;
+	vertical-align: middle;
+	table-layout: auto;
+    border: 3px solid #999;
 }
 
+tr{text-align:center;
+	vertical-align: middle;
+	border: 3px solid #999;}
+	
+thead {
+  background-color: #333;
+  color: white;
+}
+a{text-decoration:none;}
 
-
+button {
+    font-family: inherit;
+}
